# m3u8-video-downloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: funding.yml
utils/: __init__.py  colors.py  download.py  progress.py
