[tool.poetry]
name = "m3u8-video-downloader"
version = "0.1.0"
description = ""
authors = ["Dennis Lee <wylee2000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
ffmpeg-python = "^0.2.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
