[project]
name = "m3u8-video-downloader"
version = "1.0.0"
description = "M3U8 video streams downloader with master playlist support, concurrent downloads, and interactive CLI"
authors = ["Dennis Lee <wylee2000@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.urls]
Repository = "https://github.com/dennislwy/m3u8-video-downloader.git"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.2",
    "mypy>=1.19.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.0",
    "pre-commit-update>=0.9.0",
    "ruff>=0.14.8",
]
